--- a/League/Views/Shared/Components/MainNavigation/Default.cshtml
+++ b/League/Views/Shared/Components/MainNavigation/Default.cshtml
@@ -14,14 +14,14 @@
         if (!node.ShouldShow()) { continue; }
         if (!node.HasVisibleChildNodes())
         {
-            <li class="@Model.GetClass(Context, node, "nav-item", "active", true)">
-                <a class="nav-link" href="@Url.Content(node.Url!)">@Html.Raw(node.GetIcon())@node.Text</a>
+            <li class="nav-item">
+                <a class="@Model.GetClass(Context, node, "nav-link", "active", true)" href="@Url.Content(node.Url!)">@Html.Raw(node.GetIcon())@node.Text</a>
             </li>
         }
         else
         {
-            <li class="@Model.GetClass(Context, node, "nav-item dropdown", "active", true)">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="@Url.Content(node.Url!)" role="button">
+            <li class="nav-item dropdown">
+                <a class="@Model.GetClass(Context, node, "nav-link dropdown-toggle", "active", true)" data-bs-toggle="dropdown" href="@Url.Content(node.Url!)" role="button">
                     @Html.Raw(node.GetIcon())@node.Text
                 </a>
                 <partial name="@League.Views.ViewNames.Shared.NavigationNodeChildDropdownPartial" model="(Model, node)" />
