--- a/League/Styles/bootstrap/_custom.scss
+++ b/League/Styles/bootstrap/_custom.scss
@@ -1,11 +1,8 @@
 // Bootstrap dependencies - javascript and fonts must be copied manually!!
 // font-awesome is included by site.scss
-@import '../../node_modules/tether/src/css/tether.sass';
 
 // Always required for Bootstrap
 @import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
-@import "node_modules/bootstrap/scss/mixins";
 
 // Bootstrap overrides
 //
@@ -28,18 +25,26 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
 
+$primary: #018DFF;
+$secondary: $gray-600;
+$success: #01DF02;
+$info: #015496;
+$warning: #FF8901;
+$danger: #E401CD;
+$light: $gray-100;
+$dark: $gray-800;
 
 // Reassign color vars to semantic color scheme
 // Bootstrap supplies 3 function to access $theme-colors: $theme-color('key'), color('color-key'), gray($key: "gray-key")
-$theme-colors: ( 'primary': #018DFF, 'secondary': $gray-600, 'success': #01DF02, 'info': #015496, 'warning': #FF8901, 'danger': #E401CD, 'light': $gray-100, 'dark': $gray-800 );
+$theme-colors: ( 'primary': $primary, 'secondary': $secondary, 'success': $success, 'info': $info, 'warning': $warning, 'danger': $danger, 'light': $light, 'dark': $dark);
 
 // Dropdowns
 //
 // Dropdown menu container and contents.
-$dropdown-link-hover-bg: transparentize(lighten(theme-color('primary'), 30%), .6);
+$dropdown-link-hover-bg: transparentize(lighten($primary, 30%), .6);
 
 $dropdown-link-active-color: $black;
-$dropdown-link-active-bg: lighten(theme-color('primary'), 30%);
+$dropdown-link-active-bg: lighten($primary, 30%);
 
 // Body
 //
@@ -68,7 +73,7 @@ $link-hover-decoration: underline;
 
 //$input-color: theme-color("primary");
 //$input-focus-color: theme-color("primary");
-$input-focus-bg: transparentize(lighten(theme-color('success'), 50%),.5);
+$input-focus-bg: transparentize(lighten($success, 50%),.5);
 
 
 // Navbar
@@ -78,7 +83,7 @@ $navbar-dark-active-color: $white;
 $nav-tabs-border-color: theme-color('success');
 // $nav-tabs-link-hover-border-color: $gray-200 $gray-200 $nav-tabs-border-color !default; // DOES NOT WORK, see hover mix-in
 $nav-tabs-link-active-color: $black;
-$nav-tabs-link-active-bg: lighten(theme-color('success'), 45%);
+$nav-tabs-link-active-bg: lighten($success, 45%);
 $nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color $nav-tabs-border-color;
 
 // Components
@@ -87,3 +92,6 @@ $nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-colo
 $box-shadow-sm: 0 .125rem .25rem rgba($black, .015);
 $box-shadow: 0 .5rem 1rem rgba($black, .30);
 $box-shadow-lg: 0 1rem 3rem rgba($black, .35);
+
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
