--- a/League/Views/Shared/_LanguagePartial.cshtml
+++ b/League/Views/Shared/_LanguagePartial.cshtml
@@ -7,18 +7,20 @@
     if (Context.Features.Get<IRequestCultureFeature>() != null)
     {
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/" role="button">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="/" role="button">
                 @(System.Threading.Thread.CurrentThread.CurrentCulture.ThreeLetterISOLanguageName.ToUpperInvariant().First() + System.Threading.Thread.CurrentThread.CurrentCulture.ThreeLetterISOLanguageName[1..].ToLowerInvariant())
             </a>
-            <div class="dropdown-menu shadow dropdown-menu-right" style="margin-top: -0.3rem">
+            <ul class="dropdown-menu shadow dropdown-menu-right" style="margin-top: -0.3rem">
                 @{
                     var encodedCurrentRequest = WebUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}");
                     foreach (var c in LocalizationOptions.Value.SupportedCultures!)
                     {
-                        <a asp-action="@nameof(League.Controllers.Language.Index)" asp-controller="@nameof(League.Controllers.Language)" asp-route-culture="@c.TwoLetterISOLanguageName" asp-route-uiCulture="@c.TwoLetterISOLanguageName" asp-route-returnUrl="@encodedCurrentRequest" class="dropdown-item">@(Html.Raw(c.NativeName))</a>
+                        <li>
+                            <a asp-action="@nameof(League.Controllers.Language.Index)" asp-controller="@nameof(League.Controllers.Language)" asp-route-culture="@c.TwoLetterISOLanguageName" asp-route-uiCulture="@c.TwoLetterISOLanguageName" asp-route-returnUrl="@encodedCurrentRequest" class="dropdown-item">@(Html.Raw(c.NativeName))</a>
+                        </li>
                     }
                 }
-            </div>
+            </ul>
         </li>
     }
 }
