Add class 'form-select' to <select> elements

--- a/League/Views/Account/ExternalSignInConfirmation.cshtml
+++ b/League/Views/Account/ExternalSignInConfirmation.cshtml
@@ -33,7 +33,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Gender"></label>
-        <select asp-for="Gender" asp-items="GenderList()" class="custom-select col-md-6"></select>
+        <select asp-for="Gender" asp-items="GenderList()" class="form-select col-md-6"></select>
         <span asp-validation-for="Gender" class="text-danger"></span>
     </div>
     <div class="form-group">
