--- a/League/Views/Manage/_EditPersonalDetailsModalPartial.cshtml
+++ b/League/Views/Manage/_EditPersonalDetailsModalPartial.cshtml
@@ -25,7 +25,7 @@
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
                 <label asp-for="Gender"></label>
-                <select asp-for="Gender" asp-items="GenderList()" class="form-control"></select>
+                <select asp-for="Gender" asp-items="GenderList()" class="form-select"></select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
