--- a/League/Views/Role/_AddMemberModalPartial.cshtml
+++ b/League/Views/Role/_AddMemberModalPartial.cshtml
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="form-group col-12">
                     <label asp-for="ClaimType" class="mt-0"></label>
-                    <select asp-for="ClaimType" class="form-control d-block col-6" title="@(_AddMemberModalPartial.Please_select)...">
+                    <select asp-for="ClaimType" class="form-select d-block col-6" title="@(_AddMemberModalPartial.Please_select)...">
                         @foreach (var rn in selectableRoleNames)
                         {
                             <option value="@rn">@_AddMemberModalPartial.ResourceManager.GetString(rn)</option>
